# lliurex-megaphone

./: CMakeLists.txt
debian/: changelog  control  copyright  lliurex-megaphone.pofiles  rules
lliurex-po/lliurex-megaphone/: ca_ES@valencia.po  es.po  lliurex-megaphone.pot
llx-resources/lliurex-megaphone/desktops/: lliurex-megaphone.desktop
llx-resources/lliurex-megaphone/metainfo/: lliurex-megaphone.appdata.xml
rsrc/: interface.glade
src/: CMakeLists.txt  main.cpp
